--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <div class="todo">
-        <div class="todo__title">
+        <div class="todo-title">
             TO-DO LIST
         </div>
 
-        <div class="todo__list" id='todoList'>
+        <div class="todo-list" id='todoList'>
 
         </div>
 
-        <div class="todo__new-item" id="newItem">
+        <div class="todo-new-item" id="newItem">
             <div>&and;</div>
-            <input type="text" placeholder="Digite e pressione enter para adicionar a tarefa">
+            <input type="text" placeholder="Digite aqui sua tarefa!!!">
+            <button type="submit">Adicionar</button>
             <div>&and;</div>
         </div>
     </div>
