--- a/index.html
+++ b/index.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>to-do list</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-
-    <div class="container">
-      <h1>to-do list</h1>
-      <div class="new-task-container">
-        <input
-          type="text"
-          class="new-task-input"
-          placeholder="Tarefa para ser feita..."
-        />
-
-        <button class="new-task-button">Adicionar</button>
-      </div>
-
-      <div class="tasks-container"></div>
+</head>
+<body>
+    <div class="todo">
+        <div class="todo-title">
+           to-do list 
+        </div>
+          <div class="todo-list" id='todoList'>
+        </div>
+        <div class="todo-new-item" id="newItem">
+            <div>&and;</div>
+            <input type="text" placeholder="Digite aqui sua tarefa...">
+            <button type="submit">Adicionar</button>
+            <div>&and;</div>
+        </div>
     </div>
-
-    <script
-      src="https://kit.fontawesome.com/f9e19193d6.js"
-      crossorigin="anonymous"
-    ></script>
     <script src="js/apps.js"></script>
-  </body>
+</body>
 </html>
