--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>to-do list</title>
 </head>
 <body>
@@ -15,11 +15,10 @@
         </div>
         <div class="todo-new-item" id="newItem">
           <div>&and;</div>
-          <input type="text" placeholder="Digite aqui sua tarefa...">
-          <button type="submit">Adicionar</button>
+          <input type="text" placeholder="Digite sua tarefa...tecle enter...">
           <div>&and;</div>
         </div>
     </div>
-    <script src="js/apps.js"></script>
+    <script src="assets/js/apps.js"></script>
 </body>
 </html>
